# Aquifer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
c2server/: __main__.py  pyproject.toml  requirements.txt
c2server/cli/: __init__.py  app.py  implant_context.py  main_context.py  tables.py  theme.py
c2server/crypto/: aes_gcm.py  ecdh.py  traffic_shape.py
c2server/listeners/: base.py  dns_listener.py  https_listener.py
c2server/models/: database.py  loot.py  session.py  task.py
c2server/protocol/: beacon.py  polymorphic.py
cmd/implant/: main.go
docs/: index.html
internal/shared/: helpers.go
pkg/c2/: dns.go  doc.go  doh.go  fronting.go  helpers.go  https.go  ja3.go  polymorphic_beacon.go  protocol.go  protocol_test.go  rawl2.go  traffic_shape.go  transport.go
pkg/config/: config.go  config_test.go  doc.go
pkg/evasion/: audit.go  doc.go  ebpf_detect.go  edr_detect.go  fingerprint.go  fswatch.go  hiding.go  ns_monitor.go  procfs.go
pkg/namespace/: bootstrap.go  cgroup.go  doc.go  mount.go  net.go  pid.go  uts.go
pkg/opsec/: antiforensics.go  coredump.go  doc.go  guardrails.go  killswitch.go  masquerade.go  memcrypt.go  memcrypt_test.go  memldr.go
pkg/stealth/: abstract_sock.go  antidump.go  benign_strings.go  bpf_pin.go  capabilities.go  cgroup_camo.go  dbus_blend.go  decoy.go  doc.go  ebpf_cloak.go  env_clone.go  exe_spoof.go  genealogy.go  (+24 more)
scripts/: integration_test.sh  patch_upx.py
(+10 files in other folders)
